# uSeq2Tracks

./: .gitignore  .nextflow.log.1  .nextflow.log.2  .nextflow.log.3  Executor.sh  LICENSE  Makefile  RAPID_MODE_SUMMARY.md  README copy.md  README.md  Snakefile  Snakefile.bak  config.yaml  main.nf  nextflow.config  pyproject.toml  sample_sheet.csv  samples.csv  server_diagnostic.py  test_config.py  test_genome_id.py  test_rapid_config.yaml
.github/workflows/: ci.yml  publish.yml
.nextflow/: history
assets/: multiqc_config.yaml
contents/: nextflow.config
docs/: README.md
envs/: useq2tracks.yml
lib/: NfcoreTemplate.groovy  WorkflowMain.groovy  WorkflowUseq2tracks.groovy
nextflow/: QUICK_REFERENCE.md  main.nf
nextflow/conf/: base.config  modules.config  test.config
nextflow/examples/: params.yaml  run_examples.sh  samplesheet.csv
nextflow/lib/: NfcoreSchema.groovy  WorkflowMain.groovy
nextflow/modules/local/: bigwig_generate.nf  genome_prep.nf  hisat2_align.nf  samplesheet_check.nf  samtools_sort_index.nf  ucsc_hub.nf
nextflow/workflows/: useq2tracks.nf
nextflow/workflows/subworkflows/: atacseq.nf  chipseq.nf  cutrun.nf  rnaseq.nf
results/pipeline_info/: execution_report_2026-01-15_13-47-34.html  execution_report_2026-01-15_13-50-58.html  execution_timeline_2026-01-15_13-47-34.html  execution_timeline_2026-01-15_13-50-58.html  pipeline_dag_2026-01-15_13-47-34.dot  pipeline_dag_2026-01-15_13-50-58.dot
rules/: adapter_trimming.smk  ancientdna.smk  atacseq.smk  chipseq.smk  chipseq_simple.smk  common.smk  cutrun.smk  fastqc.smk  genome_prep.smk  genrich.smk  multiqc.smk  nanopore.smk  pacbio.smk  parameter_sweep.smk  replicate_merging.smk  rnaseq.smk  sra_download.smk  ucsc_tracks.smk  wgs.smk
schemas/: config.schema.yaml
src/useq2tracks/: __init__.py  cli.py  generate_ucsc_hub.py
tests/: test_check_samplesheet.py  test_cli.py  test_generate_ucsc_hub.py
